--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "react-server-dom-webpack": "^0.0.1",
     "sass": "^1.62.1",
     "typescript": "5.1.3"
   }
