--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "sass": "^1.62.1",
+    "swiper": "^9.3.2",
     "typescript": "5.1.3"
   }
 }
