--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
@@ -19,8 +20,14 @@
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-autocomplete": "^2.7.3",
+    "react-icons": "^4.9.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-query": "^3.39.3",
     "sass": "^1.62.1",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/react-places-autocomplete": "^7.2.9"
   }
 }
